Fixed user badged not showing

--- a/style.css
+++ b/style.css
@@ -128,23 +128,23 @@ html,body {
 
 .chat-badge-mod {
 	background-color: hsl(105, 89%, 36%);
-	background-image: url(http://www.twitch.tv/images/xarth/badge_mod.svg);
+	background-image: url(https://www.twitch.tv/images/xarth/badge_mod.svg);
 }
 .chat-badge-turbo {
 	background-color: hsl(261, 43%, 45%);
-	background-image: url(http://www.twitch.tv/images/xarth/badge_turbo.svg);
+	background-image: url(https://www.twitch.tv/images/xarth/badge_turbo.svg);
 }
 .chat-badge-broadcaster {
 	background-color: hsl(0, 81%, 50%);
-	background-image: url(http://www.twitch.tv/images/xarth/badge_broadcaster.svg);
+	background-image: url(https://www.twitch.tv/images/xarth/badge_broadcaster.svg);
 }
 .chat-badge-admin {
 	background-color: hsl(40, 96%, 54%);
-	background-image: url(http://www.twitch.tv/images/xarth/badge_admin.svg);
+	background-image: url(https://www.twitch.tv/images/xarth/badge_admin.svg);
 }
 .chat-badge-staff {
 	background-color: hsl(268, 55%, 13%);
-	background-image: url(http://www.twitch.tv/images/xarth/badge_staff.svg);
+	background-image: url(https://www.twitch.tv/images/xarth/badge_staff.svg);
 }
 .chat-badge-subscriber {
 }
